# deep_learning_at_scale

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.extra  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-nocuda.txt  requirements.txt
deep_learning_at_scale/: .dockerignore  _version.py  app.py
deep_learning_at_scale/chapter_10/: README.md  app.py  augmentation_example.ipynb  data_diet.py  mnist.py  outlier_detection.py  vis.ipynb  weighted_sampler.ipynb
deep_learning_at_scale/chapter_11/: README.md  app.py  contrastive_learning.py  deepseed_moe.py  distillation.py  hpo.py  mnist_moe_baseline.py  moe.py
deep_learning_at_scale/chapter_12/: README.md  app.py  qlora_llama_2.py
deep_learning_at_scale/chapter_2/: README.md  app.py  data.py  has_black_patches_or_not.py  loss_landscape.py  model.py  pyinternal.py
deep_learning_at_scale/chapter_3/: README.md  __init__.py  app.py  crawler.py
deep_learning_at_scale/chapter_4/: README.md  app.py  callback.py  custom_kernel_example.py  dataset.py  model.py  results  vision_model.py
deep_learning_at_scale/chapter_5/: README.md  app.py  mpi_probe.cpp  ray_crawler.py  simple_rpc.py  torch_dist.py
deep_learning_at_scale/chapter_7/: README.md  app.py  complete_ddp.py  ddp_centralized.py  ddp_centralized_ray.py  distributed_dataset.py  efficient_ffcv_ddp.py  hogwild.py  rpc_centralized.py  sharded_ddp.py
deep_learning_at_scale/chapter_9/: README.md  app.py  baseline_deepfm.py  deepfm.py  deepfm_mp.py  deepspeed_zero_3.py  fake_tensor_demo.py  rpc_torch_exp_pipeline_ddp_deepfm.py  rpc_torch_exp_pipeline_deepfm.py  rpc_torch_pipeline_ddp_deepfm.py  rpc_torch_pipeline_deepfm.py  simple_model_parallel_deepfm.py  torch_baseline_deepfm.py  torch_model_parallel_deepfm.py  torch_pipeline_deepfm.py  torch_tensor_deepfm.py  torch_tensor_fsdp_deepfm.py
deep_learning_at_scale/utils/: __init__.py  _export.py  dict_logger.py
scripts/: do_dep_lock.sh  install.sh  lint.sh  test.sh
